--- a/media_converter/config.json
+++ b/media_converter/config.json
@@ -9,6 +9,7 @@
     "max_image_width": 800,
     "max_image_height": 600,
     "image_format": "webp",
+    "excluded_exts": "svg",
     "image_quality": 20,
     "show_settings": "toolbar",
     "drag_and_drop": true,
@@ -35,8 +36,16 @@
     "filename_pattern_num": 0,
     "tooltip_duration_seconds": 5,
     "preserve_original_filenames": true,
+
     "bulk_convert_fields": [],
     "bulk_reconvert": false,
     "custom_name_field": "VocabKanji",
-    "saved_presets": []
+    "saved_presets": [],
+
+    "audio_conversion_enabled": false,
+    "audio_extension": "opus",
+    "ffmpeg_audio_args": [
+        "-b:a", "128k"
+    ],
+    "excluded_audio_exts": "mid"
 }
